--- a/templates/sign/register1.html
+++ b/templates/sign/register1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>一点礼品注册</title>
     {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'gift_platform_site/style.css' %}">
 </head>
 <body>
 
