--- a/templates/sign/login.html
+++ b/templates/sign/login.html
@@ -7,7 +7,7 @@
         <div><img src="{% static 'gift_platform_site/images/Bitmap.png' %}"></div>
         <div class="loginform">
             <p>请登录</p>
-            <form action="{% url 'gift_platform_site:login' %}" method="post">
+            <form action="{% url 'gift_platform_site:login' %}" method="post" id="loginform">
                 {% csrf_token %}
             <div class="usernamelogin">
                 <img id="uricon" src="{% static 'gift_platform_site/images/loginusername.png' %}">
@@ -20,10 +20,10 @@
                 <img id="clearicon2" src="{% static 'gift_platform_site/images/clear.png' %}">
             </div>
             <div class="loginbtndiv">
-                <a href="javascript:void(0)">登录</a>
+                <a href="javascript:void(0)" onclick="document.getElementById('loginform').submit()">登录</a>
             </div>
             <div class="otherdiv">
-                <a href="#">免费注册</a>
+                <a href="{% url 'gift_platform_site:reg1' %}">免费注册</a>
                 <a href="#">忘记账号密码</a>
             </div>
             </form>
