--- a/templates/sign/register2.html
+++ b/templates/sign/register2.html
@@ -119,7 +119,7 @@
             <p>营业执照：</p>
             <div class="upyyzz">
 {#                <input hidden name="yyzz" type="file" id="yyzz" >#}
-                <a href="javascript:void(0)" onclick="document.getElementById('yyzz').click();">上传营业执照</a></div>
+                <a href="javascript:void(0)" onclick="document.getElementById('yyzz').click();document.getElementById('reg2form').submit();">上传营业执照</a></div>
             <div class="zwreg"></div>
         </div>
         <div></div>
@@ -153,7 +153,7 @@
         <div>
             <p></p>
             <div>
-                <a href="javascript:void(0)" onclick="document.getElementById('reg2form').submit()">注册</a>
+                <a href="javascript:void(0)" onclick="">注册</a>
             </div>
         </div>
         <div></div>
@@ -194,7 +194,7 @@
     </div>
 </div>
 
-<form method="post" hidden enctype="multipart/form-data" action="{% url 'gift_platform_site:reg2' %}" id="reg2zp" >
+<form method="post" hidden enctype="multipart/form-data" action="{% url 'gift_platform_site:uploadimg' %}" id="reg2zp" >
     <input hidden name="yyzz" type="file" id="yyzz" onchange="document.getElementById('reg2zp').submit()" >
     {% csrf_token %}
 </form>
