--- a/templates/sign/register1.html
+++ b/templates/sign/register1.html
@@ -20,8 +20,8 @@
     <div class="btwsteps"></div>
     <div class="nocurrentstep">2.填写信息</div>
 </div>
-<hr class="hrline2"/>
-<div  class="choosetype"><div>请选择注册类型</div></div>
+{#<hr class="hrline2"/>#}
+{#<div  class="choosetype"><div>请选择注册类型</div></div>#}
 <div class="regtypes">
     <div class="choose1"><div><a href="{% url 'gift_platform_site:reg2' %}?type=1">供应商</a></div></div>
     <div class="choose2"><div><a href="{% url 'gift_platform_site:reg2' %}?type=2">礼品公司</a></div></div>
