--- a/templates/sign/reg3.html
+++ b/templates/sign/reg3.html
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="reg-login-wrap">
         <img class="logo" src="{% static 'gift_platform_site/images/logo.png' %}">
-        <p class="infotolog">已有账号？去<a href="#">登录</a></p>
+        <p class="infotolog">已有账号？去<a href="{% url 'gift_platform_site:login' %}">登录</a></p>
     </div>
 </div>
 <hr class="hrline"/>
@@ -45,7 +45,12 @@
             <div><img src="{{ yyzz }}"></div>
 
         </div>
-        <div></div>
+        <div>
+            {% if reg3Form.errors.yyzz %}
+                <img src="{% static 'gift_platform_site/images/wrong.png' %}">
+                <p class="wrong">{{ reg3Form.errors.yyzz.0 }}</p>
+            {% endif %}
+        </div>
     </div>
 
     <div class="regbtninstance">
@@ -53,7 +58,7 @@
         <div>
             <p></p>
             <div>
-                <a href="#">确定</a>
+                <a href="{% url 'gift_platform_site:home' %} }" >提交</a>
             </div>
         </div>
         <div></div>
