--- a/templates/sign/register2.html
+++ b/templates/sign/register2.html
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="reg-login-wrap">
         <img class="logo" src="{% static 'gift_platform_site/images/logo.png' %}">
-        <p class="infotolog">已有账号？去<a href="#">登录</a></p>
+        <p class="infotolog">已有账号？去<a href="{% url 'gift_platform_site:login' %}">登录</a></p>
     </div>
 </div>
 <hr class="hrline"/>
@@ -66,6 +66,10 @@
                 <img src="{% static 'gift_platform_site/images/wrong.png' %}">
                 <p class="wrong">{{ regForm.errors.checkcode.0 }}</p>
             {% endif %}
+            {% if wronginfo %}
+                <img src="{% static 'gift_platform_site/images/wrong.png' %}">
+                <p class="wrong">{{ wronginfo2 }}</p>
+            {% endif %}
         </div>
     </div>
     <div class="emailreg">
@@ -114,32 +118,6 @@
     </div>
     <input hidden name="usertype" value="{{ usertype }}"/>
     {% csrf_token %}
-
-{#    <form method="post"  enctype="multipart/form-data" action="{% url 'gift_platform_site:uploadimg' %}" id="reg2zp" >#}
-{#    <div class="yingyezhizhaoreg">#}
-{#        <div></div>#}
-{#        <div>#}
-{#            <p>营业执照：</p>#}
-{#            <div><input hidden type="text" name="pp" value="1"><input type="file"  accept="image/png,image/jpg" name="yyzz"/><a href="javascript:void(0)" onclick="document.getElementById('reg2zp').submit()">上传</a></div>#}
-{#        </div>#}
-{#        <div></div>#}
-{#    </div>#}
-{#        {% csrf_token %}#}
-{#    </form>#}
-
-{#    <div class="yingyezhizhaotupianreg">#}
-{#        <div></div>#}
-{#        <div>#}
-{#            <p></p>#}
-{#            <div><img src="{{ MEDIA_URL }}{{ yyzz }}"></div>#}
-{#        </div>#}
-{#        <div>#}
-{#            {% if regForm.errors.yyzz %}#}
-{#                <img src="{% static 'gift_platform_site/images/wrong.png' %}">#}
-{#                <p class="wrong">{{ regForm.errors.yyzz.0 }}</p>#}
-{#            {% endif %}#}
-{#        </div>#}
-{#    </div>#}
     <div class="xieyireg">
         <div></div>
         <div>
