--- a/templates/sign/reg3.html
+++ b/templates/sign/reg3.html
@@ -58,7 +58,7 @@
         <div>
             <p></p>
             <div>
-                <a href="{% url 'gift_platform_site:home' %} }" >提交</a>
+                <a href="{% url 'gift_platform_site:home' %}" >提交</a>
             </div>
         </div>
         <div></div>
